--- a/app/blocks/burger/burger.pug
+++ b/app/blocks/burger/burger.pug
@@ -7,3 +7,8 @@ mixin nd-burger()
   +b.BUTTON.nd-burger.js-open-navigation&attributes(attributes)
     +e.image
       +e.line
+
+mixin nd-burger-icon()
+  +b.BUTTON.nd-burger.js-open-navigation&attributes(attributes)
+    +e.icon
+      +icon('nd-menu-burger')
