--- a/app/blocks/filter-tag/filter-tag.scss
+++ b/app/blocks/filter-tag/filter-tag.scss
@@ -96,7 +96,7 @@
   }
 
   &:hover {
-    color: #16181c;
+    color: $nd-color-main;
     border-color: currentColor;
     background-color: currentColor;
 
