--- a/app/blocks/form-elements/nd-select.scss
+++ b/app/blocks/form-elements/nd-select.scss
@@ -252,7 +252,7 @@
     }
 
     .is-item-select & {
-      border-color: $nd-color-basic;
+      border-color: $nd-color-field-border-hover;
     }
 
     .is-error & {
