--- a/app/blocks/page/page.scss
+++ b/app/blocks/page/page.scss
@@ -65,7 +65,7 @@
 
   .is-sm-noheader & {
     @include screen('sm', max, 2) {
-      padding-top: 0;
+      padding-top: pxtovw(85, 375);
     }
   }
 
