--- a/app/blocks/profile-list/profile-list.scss
+++ b/app/blocks/profile-list/profile-list.scss
@@ -66,7 +66,7 @@
     padding: 10px 0;
     font-size: 16px;
     line-height: 1.92;
-    font-family: $font-stolzl;
+    font-family: $font-stolzl-book;
 
     @include screen('xlg', max, 2) {
       padding: pxtovw(10, 1660) 0;
