--- a/app/components/messenger/messenger.scss
+++ b/app/components/messenger/messenger.scss
@@ -19,7 +19,7 @@
   }
 
   @include screen('md', max, 2) {
-    height: calc(100vh - ((8600 + 8500 + 2200 + 6000) / 960) * 1vw);
+    height: calc(100vh - ((8600 + 8500 + 2200) / 960) * 1vw);
     border-radius: pxtovw(3, 960);
     width: 100vw;
     margin: 0 pxtovw(-50, 960);
@@ -29,7 +29,7 @@
     position: fixed;
     top: pxtovw(86, 375);
     left: 0;
-    height: calc(100% - ((8600 + 6000) / 375) * 1vw);
+    height: calc(100% - (8600 / 375) * 1vw);
     background-color: transparent;
     border-radius: pxtovw(3, 375);
     width: 100%;
