--- a/app/components/offer-card/offer-card.pug
+++ b/app/components/offer-card/offer-card.pug
@@ -50,7 +50,7 @@ mixin offer-card-for-space(item, cls)
       if item.plan
         +e.FIGURE.plan
           +e.FIGCAPTION.plan-caption Floor plan
-          +e.plan-image
+          +e.plan-image(data-fancybox=item.planTag data-src=item.plan)
             IMG(src=item.plan)
       +e.price!=(item.price.amount + ' <span class="offer-card__price-period" data-text="' + item.price.period + '" data-mobile-text="' + item.price.periodshort + '"></span>')
       +e.buttons(data-blind-zone)
