--- a/app/components/offer-panel/nd-offer-panel.scss
+++ b/app/components/offer-panel/nd-offer-panel.scss
@@ -11,7 +11,7 @@
   @include screen('md', max, 2) {
     display: flex;
     height: pxtovw(60, 960);
-    bottom: pxtovw(60, 960);
+    bottom: 0;
     left: 0;
     background-color: $nd-color-basic-light;
     z-index: 3;
@@ -19,7 +19,7 @@
 
   @include screen('sm', max, 2) {
     height: pxtovw(60, 375);
-    bottom: pxtovw(60, 375);
+    bottom: 0;
   }
 
   .nd-container {
