--- a/app/pages/deal-pass/deal-pass-viewing-chat.pug
+++ b/app/pages/deal-pass/deal-pass-viewing-chat.pug
@@ -21,7 +21,7 @@ block content
       +nd-page-header-main
         - var menuList = getData('sideNavDealPassView.json').menu;
         +e.dt-menu.nd-hide-md
-          +nd-breadcrumbs([["Home", "#"], ["Viewings", "#"], ["FBC/ Clerkenwell"]]).__breadcrumbs
+          +nd-breadcrumbs([["Home", "#"], ["Viewings", "#"], ["FBC/ Clerkenwell"]]).__breadcrumbs.nd-hide
           +person().__person
             +e.position Manager contacts:
             +nd-link()(href="mailto:mike@fbcclerkenwell.co.uk")._blue.__mail mike@fbcclerkenwell.co.uk
