--- a/app/pages/deal-pass/deal-pass-viewing.pug
+++ b/app/pages/deal-pass/deal-pass-viewing.pug
@@ -21,7 +21,7 @@ block content
       +nd-page-header-main
         - var menuList = [{ name: 'Dashboard', href: 'deal-pass-view.html'}, {name: 'Chat', href: 'deal-pass-view-chat.html'}];
         +e.dt-menu.nd-hide-md
-          +nd-breadcrumbs([["Home", "#"], ["Viewings", "#"], ["FBC/ Clerkenwell"]]).__breadcrumbs
+          +nd-breadcrumbs([["Home", "#"], ["Viewings", "#"], ["FBC/ Clerkenwell"]]).__breadcrumbs.nd-hide
           +person()._ai_base.__person
             +e.position_dark Manager contacts:
             +nd-link()(href="mailto:mike@fbcclerkenwell.co.uk")._blue.__mail mike@fbcclerkenwell.co.uk
