--- a/app/pages/sitemap/redesign-sitemap.pug
+++ b/app/pages/sitemap/redesign-sitemap.pug
@@ -5,6 +5,7 @@ block head
 
 block header
   - var headerClass = ''
+  - var isNoUser = true
   - var isMap = false
   - var host = false
   - var pageClass = ' nd-page_main'
