--- a/app/pages/space/space-v3.pug
+++ b/app/pages/space/space-v3.pug
@@ -3,6 +3,9 @@ extends ../../layouts/redesign-default
 block head
   - var pageTitle = 'Spacepool - Space'
 
+block bodyClasses
+  - var bodyCls = ' is-md-no-userpanel';
+
 block header
   - var headerClass = ' is-login'
   - var pageClass = ''
