--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -176,7 +176,7 @@ $color-input-dark: #313339;
 $color-new-disabled: #b4bbc6;
 $color-new-input: #515964;
 $color-gray-lightest: #adbabd;
-$color-check-green-2: #34d9cd;
+$color-check-green-2: hsl(176, 68%, 53%);
 
 $nd-color-basic: $color-black;
 $nd-color-basic-light: $color-white;
@@ -216,6 +216,7 @@ $nd-color-border5: #bfc3c5;
 $nd-color-blue: #1173ce;
 $nd-color-table-border: #e9eced;
 $nd-color-messenger-bg: #e8ebec;
+$nd-button-hover-color: #0094ff;
 
 // ##########
 // Transitions
