--- a/app/blocks/burger/nd-burger.scss
+++ b/app/blocks/burger/nd-burger.scss
@@ -13,6 +13,7 @@
   will-change: position;
   backface-visibility: hidden;
   color: $nd-color-basic;
+  transition: color $ease-main;
 
   @include screen('xlg', max, 2) {
     width: pxtovw(30, 1660);
@@ -32,6 +33,10 @@
   @include screen('sm', max, 2) {
     width: pxtovw(30, 375);
     height: pxtovw(30, 375);
+  }
+
+  .is-navigation-open & {
+    color: $nd-color-main;
   }
 
   &_small {
@@ -130,6 +135,53 @@
         width: pxtovw(15, 375);
         top: pxtovw(7, 375);
       }
+    }
+  }
+
+  &__icon {
+    position: absolute;
+    top: 50%;
+    right: 0;
+    transform: translate3d(0, -50%, 0);
+    width: 30px;
+    height: 25px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(30, 1660);
+      height: pxtovw(25, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(26, 1366);
+      height: pxtovw(22, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(26, 960);
+      height: pxtovw(22, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(22, 375);
+      height: pxtovw(18, 375);
+    }
+
+    #{$b}_small & {
+      @include screen('md', max, 2) {
+        width: pxtovw(19, 960);
+        height: pxtovw(16, 960);
+      }
+
+      @include screen('sm', max, 2) {
+        width: pxtovw(19, 375);
+        height: pxtovw(16, 375);
+      }
+    }
+
+    svg {
+      stroke: currentColor;
+      width: 100%;
+      height: 100%;
     }
   }
 }
