--- a/app/blocks/form-box/form-box.scss
+++ b/app/blocks/form-box/form-box.scss
@@ -421,7 +421,7 @@
       font-size: 11px;
       line-height: (13 / 11);
       font-weight: 400;
-      color: $nd-color-basic;
+      color: $nd-color-gray-text;
       transform: translate3d(0, -39px, 0);
       transform-origin: 0 50%;
       padding: 4px;
@@ -459,24 +459,6 @@
 
     .nd-choices.is-flipped ~ #{$b}__label {
       // opacity: 0;
-    }
-  }
-
-  &.nd-form-box_sm-h50 {
-    #{$b} {
-      @include screen('sm', max, 2) {
-        left: pxtovw(7, 375);
-        font-size: pxtovw(17, 375);
-        padding: pxtovw(13, 375) pxtovw(4, 375) pxtovw(9, 375);
-      }
-    }
-
-    &.is-top #{$b}__label,.nd-choices.is-item-select ~ #{$b}__label,.nd-choices.is-open ~ #{$b}__label {
-      @include screen('sm', max, 2) {
-        transform: translate3d(0, pxtovw(-39, 375), 0);
-        font-size: pxtovw(11, 375);
-        padding: pxtovw(4, 375);
-      }
     }
   }
 
@@ -524,6 +506,27 @@
     }
   }
 
+  &.nd-form-box_sm-h50 {
+    #{$b} {
+      &__label {
+        @include screen('sm', max, 2) {
+          left: pxtovw(7, 375);
+          font-size: pxtovw(17, 375);
+          line-height: (26 / 17);
+          padding: pxtovw(13, 375) pxtovw(4, 375) pxtovw(9, 375);
+        }
+      }
+    }
+
+    &.is-top #{$b}__label,.nd-choices.is-item-select ~ #{$b}__label,.nd-choices.is-open ~ #{$b}__label {
+      @include screen('sm', max, 2) {
+        transform: translate3d(0, pxtovw(-39, 375), 0);
+        font-size: pxtovw(11, 375);
+        padding: pxtovw(4, 375);
+      }
+    }
+  }
+
   &.nd-form-box_bg-white {
     &.is-top #{$b}__label, .nd-choices.is-item-select ~ #{$b}__label, .nd-choices.is-open ~ #{$b}__label {
       background-color: $nd-color-basic-light;
@@ -534,31 +537,35 @@
     display: block;
     position: absolute;
     top: 100%;
-    left: 50%;
-    transform: translate3d(-50%, 0, 0);
+    left: 0;
     visibility: hidden;
     opacity: 0;
     pointer-events: none;
     transition: opacity $ease-main;
     will-change: visibility;
-    width: 700px;
-    z-index: 2;
+    width: 868px;
+    z-index: 3;
     background-color: $nd-color-bg;
+    margin-top: 20px;
 
     @include screen('xlg', max, 2) {
-      width: pxtovw(700, 1660);
+      width: pxtovw(868, 1660);
+      margin-top: pxtovw(20, 1660);
     }
 
     @include screen('lg', max, 2) {
-      width: pxtovw(700, 1366);
+      width: pxtovw(868, 1366);
+      margin-top: pxtovw(20, 1366);
     }
 
     @include screen('md', max, 2) {
-      width: pxtovw(700, 960);
+      width: pxtovw(868, 960);
+      margin-top: pxtovw(20, 960);
     }
 
     @include screen('sm', max, 2) {
-      width: pxtovw(350, 375);
+      width: pxtovw(335, 375);
+      margin-top: pxtovw(20, 375);
     }
 
     &_white {
