--- a/app/blocks/form-elements/nd-input.scss
+++ b/app/blocks/form-elements/nd-input.scss
@@ -41,14 +41,6 @@
     min-height: pxtovw(40, 375);
   }
 
-  &_sm-h50 {
-    @include screen('sm', max, 2) {
-      font-size: pxtovw(17, 375);
-      padding: pxtovw(14, 375) pxtovw(11, 375) pxtovw(8, 375);
-      min-height: pxtovw(50, 375);
-    }
-  }
-
   &_h40 {
     padding: 9px 11px 3px;
     min-height: 40px;
@@ -74,10 +66,21 @@
     }
   }
 
+  &_sm-h50 {
+    @include screen('sm', max, 2) {
+      font-size: pxtovw(17, 375);
+      line-height: (26 / 17);
+      padding: pxtovw(14, 375) pxtovw(11, 375) pxtovw(8, 375);
+      min-height: pxtovw(50, 375);
+    }
+  }
+
   &_open {
-    border-radius: 0;
-    border-color: transparent;
-    border-bottom-color: $nd-color-field-border;
+    @include screen('sm', min, 2) {
+      border-radius: 0;
+      border-color: transparent;
+      border-bottom-color: $nd-color-field-border;
+    }
   }
 
   &:-ms-input-placeholder {
@@ -167,7 +170,7 @@
   }
 
   .is-top & {
-    border-color: $nd-color-basic;
+    border-color: $nd-color-field-border-hover;
     box-shadow: inset 0 0 0 1px rgba(255, 255, 255, 0);
     border-radius: 3px;
 
