--- a/app/blocks/header-user/nd-header-user.pug
+++ b/app/blocks/header-user/nd-header-user.pug
@@ -10,7 +10,7 @@ mixin nd-header-user(host)
         +nd-short-profile-origin('assets/images/nd/user-avatar-1.jpg', 'Marge Landlordy', 'a')._login(href="#")
     +e.UL.list
       +e.LI.item
-        +nd-user-link('', '', newMessages).js-show-notices(href="#events-list")
+        +nd-user-link('', '', newMessages)(href="#")
           +e.SVG.icon_calendar(fill="none" viewBox="0 0 29 25" xmlns="http://www.w3.org/2000/svg")
             path(d="M26.58 1.6C26.79 1.6 26.95 1.77 26.95 1.97V22.87C26.95 23.08 26.78 23.24 26.58 23.24H1.97C1.76 23.24 1.6 23.07 1.6 22.87V1.97C1.6 1.76 1.77 1.6 1.97 1.6H26.58ZM26.58 0H1.97C0.88 0 0 0.88 0 1.97V22.87C0 23.96 0.88 24.84 1.97 24.84H26.58C27.67 24.84 28.55 23.96 28.55 22.87V1.97C28.56 0.88 27.67 0 26.58 0Z" fill="black")
             path(d="M28.56 6.89H0V8.49H28.56V6.89Z" fill="black")
@@ -24,7 +24,7 @@ mixin nd-header-user(host)
               path(d="M17.69 18.53H16.54C16.1 18.53 15.74 18.17 15.74 17.73C15.74 17.29 16.1 16.93 16.54 16.93H17.69C18.13 16.93 18.49 17.29 18.49 17.73C18.49 18.17 18.13 18.53 17.69 18.53Z" fill="#0085FF")
               path(d="M23.16 18.53H22.01C21.57 18.53 21.21 18.17 21.21 17.73C21.21 17.29 21.57 16.93 22.01 16.93H23.16C23.6 16.93 23.96 17.29 23.96 17.73C23.96 18.17 23.6 18.53 23.16 18.53Z" fill="#0085FF")
       +e.LI.item
-        +nd-user-link('', '', newMessages).js-show-notices(href="#messages-list")
+        +nd-user-link('', '', newMessages)(href="#")
           +e.SVG.icon_message(viewBox="0 0 28 25" fill="none" xmlns="http://www.w3.org/2000/svg")
             path(d="M17.61 1.6C22.34 1.6 26.19 5.45 26.19 10.18C26.19 14.91 22.34 18.76 17.61 18.76H14.24H14.12C13.63 18.76 13.17 18.98 12.86 19.37L10.81 21.97L10.27 19.85C10.11 19.22 9.59 18.76 8.95 18.66C4.76 18.04 1.6 14.4 1.6 10.18C1.6 5.45 5.45 1.6 10.18 1.6H17.61ZM17.61 0H10.17C4.58 0 0 4.58 0 10.18C0 15.28 3.81 19.53 8.73 20.24L9.81 24.46C9.88 24.71 10.1 24.86 10.32 24.86C10.47 24.86 10.62 24.8 10.73 24.66L14.12 20.36H14.24H17.61C23.21 20.36 27.79 15.78 27.79 10.18C27.79 4.58 23.21 0 17.61 0Z" fill="black")
             path(d="M19.58 8.58H7.57C7.13 8.58 6.77 8.22 6.77 7.78C6.77 7.34 7.13 6.98 7.57 6.98H19.59C20.03 6.98 20.39 7.34 20.39 7.78C20.39 8.22 20.03 8.58 19.58 8.58Z" fill="#0085FF")
