--- a/app/blocks/link/nd-link.scss
+++ b/app/blocks/link/nd-link.scss
@@ -26,7 +26,7 @@
 
   &:hover {
     #{$b}__text {
-      text-decoration: underline;
+      text-decoration: underline $nd-color-main;
     }
   }
 
