--- a/app/blocks/social/social.scss
+++ b/app/blocks/social/social.scss
@@ -27,6 +27,8 @@
 }
 
 .nd-social {
+  $b: &;
+
   display: block;
   font-size: 0;
   line-height: 0;
@@ -62,6 +64,36 @@
     @include screen('sm', max, 2) {
       width: pxtovw(23, 375);
       height: pxtovw(23, 375);
+    }
+
+    #{$b}_small & {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &_small {
+    width: 22px;
+    height: 22px;
+
+    @include screen('xlg', max, 2) {
+      width: pxtovw(22, 1660);
+      height: pxtovw(22, 1660);
+    }
+
+    @include screen('lg', max, 2) {
+      width: pxtovw(22, 1366);
+      height: pxtovw(22, 1366);
+    }
+
+    @include screen('md', max, 2) {
+      width: pxtovw(22, 960);
+      height: pxtovw(22, 960);
+    }
+
+    @include screen('sm', max, 2) {
+      width: pxtovw(22, 375);
+      height: pxtovw(22, 375);
     }
   }
 }
