--- a/app/blocks/socials/socials.scss
+++ b/app/blocks/socials/socials.scss
@@ -53,5 +53,27 @@
         margin-left: pxtovw(32, 375);
       }
     }
+
+    &_mg17 {
+      &:not(:first-child) {
+        margin-left: 17px;
+
+        @include screen('xlg', max, 2) {
+          margin-left: pxtovw(17, 1660);
+        }
+
+        @include screen('lg', max, 2) {
+          margin-left: pxtovw(17, 1366);
+        }
+
+        @include screen('md', max, 2) {
+          margin-left: pxtovw(17, 960);
+        }
+
+        @include screen('sm', max, 2) {
+          margin-left: pxtovw(17, 375);
+        }
+      }
+    }
   }
 }
