--- a/app/components/header/nd-header.pug
+++ b/app/components/header/nd-header.pug
@@ -11,4 +11,4 @@ mixin nd-header(host)
           +e.user
             +nd-header-user(host)
         +e.burger
-          +nd-burger
+          +nd-burger-icon()(data-menu-position="top")
