--- a/app/pages/deal-pass/deal-pass-statements.pug
+++ b/app/pages/deal-pass/deal-pass-statements.pug
@@ -21,7 +21,7 @@ block content
       +nd-page-header-main
         - var menuList = getData('sideNavDealPassRent.json').menu;
         +e.dt-menu.nd-hide-md
-          +nd-breadcrumbs([["Home", "#"], ["Spaces", "#"], ["Clerkenworks London"]]).__breadcrumbs
+          +nd-breadcrumbs([["Home", "#"], ["Spaces", "#"], ["Clerkenworks London"]]).__breadcrumbs.nd-hide
           +person().__person
             +e.position Client:
             +nd-short-profile-data({ava: {img: 'assets/images/nd/user-avatar-2.jpg', class: '_sz34'}, name: 'Mike Regent', nameClass: '_fz17'})._nd.__profile
